--- a/index.html
+++ b/index.html
@@ -41,10 +41,14 @@
             </div>
             <div class="about-col-2">
                 <h1 class="sub-title">About Me</h1>
-                <p class="about-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-                    Phasellus fringilla, lectus et finibus bibendum, ipsum lectus tempor tortor, ac venenatis dui nisl eget sapien. Donec vitae massa tristique, venenatis sem vel, finibus metus.
-                    Aenean vitae velit eu sapien tempor blandit eu a ante. Suspendisse vitae nibh nec lorem dignissim placerat vitae nec quam.</p>
-
+                <p class="about-text">Hello! My name is <b>Muhammad Fuadi Kamil</b>, an Informatics student at the University of Jember. 
+                                    I am passionate about <b>web development</b> and <b>UI/UX design</b>. 
+                                    My journey began in high school, where I actively participated in student organizations, 
+                                    building strong leadership, communication, and teamwork skills.
+                                    <br><br>
+                                    Currently, I am focusing on improving my programming skills, working on personal projects, 
+                                    and exploring new technologies to prepare myself for a future career in IT. 
+                                    I believe that continuous learning and the courage to take on new challenges are the keys to growth.
                 <div class="tab-titles">
                     <p class="tab-links active-link" onclick="opentab('skills', event)">Skills</p>
                     <p class="tab-links" onclick="opentab('experience', event)">Experience</p>
@@ -52,23 +56,23 @@
                 </div>
                 <div class="tab-contents active-tab" id="skills">
                     <ul>
-                        <li><span>UI/UX</span><br>Designing Web/App Interfaces</li>
-                        <li><span>Web Development</span><br>Web app Development</li>
-                        <li><span>App Development</span><br>Building Android/IOS Apps</li>
+                        <li><span>Web Development</span><br>Building responsive websites with HTML, CSS, and JavaScript</li>
+                        <li><span>UI/UX Design</span><br>Designing modern, user-friendly interfaces with Figma</li>
+                        <li><span>Programming</span><br>Experience with Python, C#, and Java</li>
                     </ul>
                 </div>
                 <div class="tab-contents" id="experience">
                     <ul>
-                        <li><span>UI/UX</span><br>Designing Web/App Interfaces</li>
-                        <li><span>Web Development</span><br>Web app Development</li>
-                        <li><span>App Development</span><br>Building Android/IOS Apps</li>
+                        <li><span>Head of Creative Design – Amnesty</span><br>Led the creative division, focusing on visual design and branding (2024 – present)</li>
+                        <li><span>Staff of Human Resource Management – LAOS (Linux and Open Source)</span><br>Responsible for HR tasks, member development, and organizational support (2024 – present)</li>
+                        <li><span>Member – UKM Kesenian, University of Jember</span><br>Active in cultural and artistic student activities (2024 – present)</li>
                     </ul>
                 </div>
                 <div class="tab-contents" id="educations">
                     <ul>
-                        <li><span>SMA</span><br>Bws</li>
-                        <li><span>Kuliah</span><br>Pernah kuliah di UIN</li>
-                        <li><span>Kuliah Lagi</span><br>Sekarang di UNET</li>
+                        <li><span>SMAN 3 Bondowoso</span><br>Science major (Graduated 2023)</li>
+                        <li><span>Informatics, University of Jember</span><br>Bachelor’s degree in progress (since 2023)</li>
+                        <li><span>Courses & Self-learning</span><br>Actively learning through Indian uncle videos and personal projects</li>
                     </ul>
                 </div>
             </div>
@@ -84,22 +88,22 @@
             <div class="project-card">
                 <img src="images/locked.jpg" alt="Project 1">
                 <div class="layer">
-                    <h3>Portfolio Website</h3>
-                    <p>Personal website showcasing my skills and works.</p>
+                    <h3>Project</h3>
+                    <p>Soon</p>
                 </div>
             </div>
             <div class="project-card">
                 <img src="images/locked.jpg" alt="Project 2">
                 <div class="layer">
-                    <h3>Mobile App</h3>
-                    <p>Prototype and development of mobile applications.</p>
+                    <h3>Project</h3>
+                    <p>Soon</p>
                 </div>
             </div>
             <div class="project-card">
                 <img src="images/locked.jpg" alt="Project 3">
                 <div class="layer">
-                    <h3>UI/UX Design</h3>
-                    <p>Creative user interfaces and prototypes for apps.</p>
+                    <h3>Project</h3>
+                    <p>Soon</p>
                 </div>
             </div>
         </div>
@@ -113,7 +117,6 @@
 <!-- ------------------ Contact ------------------ -->
 <div id="contact">
   <div class="container">
-    <h1 class="sub-title">Contact Me!</h1>
     <p>Let's connect on my social media</p>
     <div class="social-icons circle">
         <a href="mailto:fuadikamil45@gmail.com" target="_blank">
