--- a/projects.html
+++ b/projects.html
@@ -14,43 +14,43 @@
                 <div class="project-card">
                     <img src="images/locked.jpg" alt="Project 1">
                     <div class="layer">
-                        <h3>Portfolio Website</h3>
-                        <p>Personal website showcasing my skills and works.</p>
+                        <h3>Project</h3>
+                        <p>Soon</p>
                     </div>
                 </div>
                 <div class="project-card">
                     <img src="images/locked.jpg" alt="Project 2">
                     <div class="layer">
-                        <h3>Mobile App</h3>
-                        <p>Prototype and development of mobile applications.</p>
+                        <h3>Project</h3>
+                        <p>Soon</p>
                     </div>
                 </div>
                 <div class="project-card">
                     <img src="images/locked.jpg" alt="Project 3">
                     <div class="layer">
-                        <h3>UI/UX Design</h3>
-                        <p>Creative user interfaces and prototypes for apps.</p>
+                        <h3>Project</h3>
+                        <p>Soon</p>
                     </div>
                 </div>
                 <div class="project-card">
                     <img src="images/locked.jpg" alt="Project 4">
                     <div class="layer">
-                        <h3>Landing Page</h3>
-                        <p>Responsive landing page for a startup product.</p>
+                        <h3>Project</h3>
+                        <p>Soon</p>
                     </div>
                 </div>
                 <div class="project-card">
                     <img src="images/locked.jpg" alt="Project 5">
                     <div class="layer">
-                        <h3>E-commerce Website</h3>
-                        <p>Mockup online shop with shopping cart feature.</p>
+                        <h3>Project</h3>
+                        <p>Soon</p>
                     </div>
                 </div>
                 <div class="project-card">
                     <img src="images/locked.jpg" alt="Project 6">
                     <div class="layer">
-                        <h3>Blog Platform</h3>
-                        <p>Simple blog app built with HTML, CSS, and JS.</p>
+                        <h3>Project</h3>
+                        <p>Soon</p>
                     </div>
                 </div>
             </div>
