--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
             </div>
         </nav>
         <div class="header-text">
-            <p>UI/UX Deisgner</p>
-            <h1>Hi, I'm <span>Anon</span><br>From Jember Utara</h1>
+            <p>Tech Enthusiast</p>
+            <h1>Hi, I'm <span>Adi</span><br>Welcome to My Portfolio!</h1>
         </div>
     </div>
 </div>
